# flask-socketio-test

./: pyproject.toml
flask_socketio_test/: app.py
flask_socketio_test/templates/: index.html
