[tool.poetry]
name = "flask-socketio-test"
version = "0.1.0"
description = ""
authors = ["kawayama <kawa130307@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_socketio_test"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
